--- a/templates/chat.html
+++ b/templates/chat.html
@@ -76,7 +76,7 @@
 
     <script>
         // SocketIO connection
-        var socket = io('http://13.60.225.41', {
+        var socket = io('http://13.60.105.20/', {
 			transports: ['websocket', 'polling']
 		});
 
