--- a/templates/chat.html
+++ b/templates/chat.html
@@ -31,7 +31,7 @@
 
         #avatar {
             margin-left: 20px;
-            max-width: 100px; /* Adjust the image size */
+            max-width: 200px; /* Adjust the image size */
             height: auto;
             border-radius: 10px;
             border: 2px solid #1E90FF; /* Optional blue border */
@@ -121,6 +121,7 @@
             if (message && message.trim() !== '') {
                 socket.send(message);
                 document.getElementById('message-input').value = '';
+                changeAvatar(); // Change avatar on each message sent
             } else {
                 console.log('No message to send.');
             }
@@ -130,6 +131,17 @@
             if (event.key === 'Enter') {
                 sendMessage();
             }
+        }
+
+        // Function to change avatar randomly
+        function changeAvatar() {
+            const avatarImages = [
+                '/static/images/avatar_hello.jpg',
+                '/static/images/avatar_celebration.jpg',
+                '/static/images/avatar_happy.jpg'
+            ];
+            const randomIndex = Math.floor(Math.random() * avatarImages.length);
+            document.getElementById('avatar').src = avatarImages[randomIndex];
         }
 
         // Wave effect background
